# nomad-commerce-analytics

./: .env.example  .gitignore  .pre-commit-config.yaml  .sqlfluff  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: streamlit_app.py
app/pages/: 01_Overview.py  02_Delivery_and_Reviews.py  03_Freight_and_Distance.py  05_Category_Explorer.py
app/utils/: db.py  glossary.py  insights.py
config/: config.yaml
dbt/: dbt_project.yml  profiles.yml
dbt/models/core/: core__schema.yml  dim_customers.sql  dim_products.sql  fct_order_items.sql  fct_orders.sql
dbt/models/real_world/: fct_deliveries.sql  fct_freight.sql  mrt_kpis_daily_real.sql  mrt_reviews.sql  real__schema.yml
dbt/models/staging/: stg_customers.sql  stg_order_items.sql  stg_orders.sql  stg_reviews.sql  stg_sellers.sql
docs/: kpi_dictionary.md  runbook.md
scripts/: ingest_olist.py  quality_checks.py  snapshot_db_docs.py
tests/e2e/: test_end_to_end.py
tests/python/: test_ols_helper.py
